@@ -10,7 +10,10 @@ export const getConfig = ( name ) => {
 	// Classic checkout or blocks-based one.
 	const config =
 		// eslint-disable-next-line camelcase
-		wcpay_config || wc.wcSettings.getSetting( 'woocommerce_payments_data' );
+		'undefined' !== typeof wcpay_config
+			? // eslint-disable-next-line camelcase
+			  wcpay_config
+			: wc.wcSettings.getSetting( 'woocommerce_payments_data' );
 
 	return config[ name ] || null;
 };
